--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "",
+  "name": "astro-blog",
   "type": "module",
   "version": "0.0.1",
+  "browserslist": [
+    "defaults"
+  ],
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,6 +13,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.8"
+    "astro": "^1.6.13",
+    "astro-icon": "^0.8.0"
   }
 }
