--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.13",
-    "astro-icon": "^0.8.0"
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.9",
+    "astro-icon": "^0.8.0",
+    "tailwindcss": "^3.3.1"
   }
 }
